bugfix/contact-overflow

--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   align-items: center;
   margin-top: 3rem;
+  width: 100%;
 }
 
 .contact .content {
